agrego item a lista

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <li class="items">Espacio diferenciado</li>
         <li class="items">Localizacion</li>
         <li class="items">Atencion personalizada</li>
+        <li class="items">Ultima Tecnologia</li>
     </ul>
     <img class="imagenDiferenciales" src="./img/diferenciales.jpg" alt="diferenciales">
 </div>
