--- a/productos.html
+++ b/productos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos | Barberia Alura</title>
     <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/productos.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
